--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,22 @@
-# Dependencies
-/node_modules
-/backend/node_modules
-/frontend/node_modules
-
-# Build artifacts
-/frontend/dist
-/coverage
-
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Local environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+node_modules
+dist
+dist-ssr
+*.local
 
-# IDE-specific
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
 .idea
-.vscode
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
