--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -7,7 +7,9 @@
         "sourceMap": true,
         "strict": true,
         "target": "es2017",
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true
     },
     "compileOnSave": true,
     "include": [
